Minor spacing and alignment fixes

--- a/src/app/compare-all-form/compare-all-form.component.scss
+++ b/src/app/compare-all-form/compare-all-form.component.scss
@@ -1,3 +1,18 @@
 .form-inline label {
-    padding-right: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.build-form-heading {
+  > * {
+    margin: 0 10px;
+
+    &:first-child {
+      margin-left: 0;
+    }
+  }
+
+  .btn-sm {
+    padding: 0 5px;
+    margin-bottom: 5px;
+  }
 }
