--- a/src/app/equipment/equipment.component.scss
+++ b/src/app/equipment/equipment.component.scss
@@ -2,6 +2,6 @@
   flex-grow: unset;
 }
 
-h2 {
-  display: inline-block;
+.h3 {
+  padding-right: 5px;
 }
